--- a/style.css
+++ b/style.css
@@ -7,26 +7,23 @@
     --font-secondary: 'Quicksand', serif;
     --font-tertiary: 'Montserrat', sans-serif;
 }
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
 body, html {
     font-family: var(--font-primary);
     max-width: 80vw;
     margin: auto;
     color: var(--text-color);
+    margin: 0% 5%;
 }
 
+                                            /* CABEÇALHO*/
 header {
-    background: linear-gradient(270deg, #016185, #00a79d);
+    background: linear-gradient(270deg, var(--secondary-color), var(--primary-color));
     background-size: 400% 400%;
     animation: gradientMove 10s ease infinite;
     display: flex;
     align-items: center;
-    justify-content:space-around;
+    justify-content: space-between;
     padding: 50px 5%;
     border-radius: 0 0 30px 30px;
     width: 100%;
@@ -61,12 +58,7 @@ header {
     max-width: 100%;
     height: auto;
     margin-left: 25%;
-}
-
-@media (max-width: 768px) {
-    .logo {
-        width: 80px;
-    }
+    padding: 8%;
 }
 
 #navbarNav {
@@ -76,10 +68,6 @@ header {
     gap: 5%;
     width: 100%;
     padding: 0% 20% 3% 0%;
-}
-.col-2{
-    position: absolute;
-    left: 10%; 
 }
 
 .navbar .nav-link,
@@ -94,7 +82,8 @@ header {
     font-size: 1rem;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
-#dropdownMenuLink{
+
+#dropdownMenuLink {
     text-decoration: none;
     background-color: transparent;
     border: none;
@@ -107,10 +96,14 @@ header {
 
 .dropdown-item:hover {
     background-color: transparent;
-    color: #00a79d;
+    color: var(--primary-color);
 }
 
-@media (max-width: 992px) {
+@media (max-width: 768px) {
+    .logo {
+        width: 80px;
+    }
+
     .navbar {
         flex-direction: column;
         align-items: center;
@@ -138,12 +131,11 @@ header {
     }
 }
 
-
 h1, h2 {
-    font-family: "Quicksand", serif;
+    font-family: var(--font-secondary);
     font-size: 2.5rem;
     text-align: center;
-    color: #4a4a4a;
+    color: var(--text-color);
     font-weight: bold;
 }
 
@@ -151,13 +143,39 @@ p {
     font-size: 1.2rem;
     line-height: 1.6;
     text-align: justify;
-    font-family: "Montserrat";
+    font-family: var(--font-tertiary);
 }
 
 img {
     max-width: 100%;
     height: auto;
     border-radius: 10px;
+}
+
+.botao{
+    width: calc(400px + 5vw);
+    height: auto;
+    text-align: center;
+    text-decoration: none;
+    font-size: 1.5rem;
+    font-family: var(--font-tertiary);
+    padding: 10px 20px;
+    border: 1px solid #fff;
+    background-color: var(--primary-color);
+    color: #fff;
+    text-shadow: 4px 4px 5px #4a4a4a;
+    border-radius: 25px;
+    margin: 1% 0 0 0;
+    transition: all 0.3s ease;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.botao:hover{
+    color: #fff !important;
+    background-color: #016185 !important;
+    border-color:#00a79d !important;
+    box-shadow: 0 0 35px #fed433; 
+    transform: translateY(-3px) !important; 
 }
 
 @media (max-width: 768px) {
@@ -173,6 +191,7 @@ img {
 }
 
 
+                                            /* INICIALIZAÇÃO DO SITE*/
 .intro {
     margin: 0;
     overflow: hidden;
@@ -188,15 +207,6 @@ img {
     height: 100%;
     opacity: 1;
     animation: fadeOut 3s ease-in-out 2.5s forwards;
-}
-
-@keyframes fadeOut {
-    0% {
-        opacity: 1;
-    }
-    100% {
-        opacity: 0;
-    }
 }
 
 .logoIntro {
@@ -227,119 +237,92 @@ img {
     }
 }
 
-/*CORPO 1 - VOCÊ JÁ CONHECE A AGSUS?*/
-#Corpo1{
+                                            /* CORPO 1 */
+#Corpo1 {
     display: grid;
-    grid-auto-flow: column;
-    columns: center;
     grid-template-columns: 60% 40%;
     padding-top: calc(120px + 5vh);
 }
-.tituloC1{
+
+.tituloC1 {
     font-size: 4rem;
-    color: #52b297;
+    color: var(--primary-color);
+    text-align: left;
+    padding-bottom: 2%;
 }
 
-.corpo1D{
+.corpo1D {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 50px;
 }
 
-.logoAgsus{
+.logoAgsus {
     max-width: 100%;
     height: auto;
     width: 400px;
 }
-.corpo1E{
+
+.corpo1E {
     padding-top: 10%;
     text-align: justify;
 }
-.tituloC1{
-    text-align: left;
-    padding-bottom: 2%;
-}
 
-.btnAgSUS {
-    width: calc(400px + 5vw);
-    height: auto;
+.botaoAgSUS {
+    padding: 5% 10% 0 10%;
     text-align: center;
-    text-decoration: none;
-    font-size: 1.5rem; 
-    font-family: 'Montserrat', sans-serif;
-    padding: 10px 20px;
-    border: 1px solid #fff;
-    background-color: #00a79d;
-    color: #fff;
-    text-shadow: 4px 4px 5px #4a4a4a;
-    border-radius: 25px;
-    margin: 1% 0% 0% 0%;
-    transition: all 0.3s ease;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
 }
 
-.btnAgSUS:hover, .btnAgSUS:focus {
-    color: #fff !important;
-    background-color: #016185 !important;
-    border-color:#00a79d !important;
-    box-shadow: 0 0 35px #fed433; 
-    transform: translateY(-3px) !important; 
+
+                                            /* DIRETORIA*/
+.tituloDiretoria {
+    padding: 3% 10% 0 10%;
 }
 
-.botaoAgSUS{
-    padding: 5% 10% 0% 10%;
-}
-
-/* DIRETORIA */
-.tituloDiretoria{
-    padding: 3% 10% 0% 10%;
-}
-
-#diretoriaC1{
+#diretoriaC1 {
     display: grid;
-    grid-auto-flow: column;
-    columns: center;
-    column-gap: 5%;
-    margin:2% 15% 0% 15%;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 5%;
+    margin: 2% 15% 0 15%;
     border-radius: 10px;
     color: #070606;
 }
 
-.diretoriaImg{
+.diretoriaImg {
     width: 100%;
     max-width: 800px;
     height: auto;
     padding-bottom: 3%;
 }
 
-.diretoriaImgLuciana{
-    width: 105%; /* Aumenta o tamanho em relação às outras imagens */
-    max-width: 800px; /* Ajusta o limite máximo */
+.diretoriaImgLuciana {
+    width: 105%;
+    max-width: 800px;
     height: auto;
-    align-self: center; /* Mantém alinhado verticalmente */
+    align-self: center;
 }
 
-.textoDiretor{
+.textoDiretor {
     text-align: center;
-    padding-top: 5%;    
+    padding-top: 5%;
 }
 
-.textoLuciana{
+.textoLuciana {
     padding-top: 13%;
     text-align: center;
 }
 
-.botaoAgSUS{
-    text-align: center;
-}
 
-
-/*CORPO 2 - CONHEÇA O NSD*/
+                                            /* CORPO 2 */
 .corpo2 {
     padding-top: 5%;
     padding-bottom: 0;
-    margin-bottom: 0;
+    margin-bottom: -20px; 
+}
+
+.titulo-c2 {
+    margin-bottom: 10px; 
 }
 
 .subtitulo-c2 {
@@ -347,7 +330,7 @@ img {
     font-weight: 300;
     color: #00a79d;
     font-style: italic;
-    margin-bottom: 10px;    
+    margin-bottom: 10px;
 }
 
 .conteudo-c2 {
@@ -359,35 +342,34 @@ img {
     margin-top: -20px !important;
 }
 
-
 .texto-c2 {
     text-align: justify;
     align-self: start;
     margin-top: 160px;
     padding: 0;
+    margin-bottom: 0; 
 }
-
 
 img {
     max-width: 100%;
     height: auto;
 }
 
-
 .imagem-susete {
     align-self: start;
     margin-left: 25%;
     height: 70%;
+    margin-bottom: 0; 
 }
 
-
 .logo-c2 {
-    max-width: 500px; 
+    max-width: 500px;
     width: 40vw;
     height: auto;
     z-index: 10;
     top: -180px;
     position: relative;
+    margin-bottom: 0;
 }
 
 /* Responsividade */
@@ -402,7 +384,7 @@ img {
 }
 
 
-/* CORPO 3 - SUBSTITUIÇÃO TEMPORÁRIA DE MÉDICOS VIA TELESSAÚDE*/
+                                            /* CORPO 3 */
 
 .corpo3__container {
     display: grid;
@@ -453,33 +435,13 @@ img {
 
 .btn_c3 {
     width: calc(80px + 5vw);
-    text-align: center;
     font-size: 1rem;
-    font-family: 'Montserrat', sans-serif;
     padding: 3%;
-    border: 1px solid #fff;
-    background-color: #00a79d;
-    color: #fff;
-    text-shadow: 4px 4px 5px #4a4a4a;
-    border-radius: 25px;
-    transition: all 0.3s ease;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     text-decoration: none;
 }
 
-.btn--primary:hover {
-    background-color: #016185;
-    box-shadow: 0 0 35px #fed433;
-    transform: translateY(-3px);
-}
 
-.btn--primary:active {
-    transform: translateY(2px);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-
-/*CORPO 4 - CARROSSEL DA EQUIPE*/
+                                            /* CORPO 4 */
 .tituloCarrossel{
     padding-top: 5%;
 }
@@ -554,7 +516,7 @@ img {
 }
 
 
-/*CORPO 5 - O SERVIÇO PELO BRASIL*/
+                                            /* CORPO 5 */
 .onde-atuamos {
     display: grid;
     grid-auto-flow: column;
@@ -562,7 +524,6 @@ img {
     grid-template-columns: 60% 40%;
     gap: 1%;
     margin-top: 5%;
-
 }
 
 .onde-atuamos__conteudo {
@@ -636,7 +597,7 @@ img {
     }
 }
 
-/*CORPO 6 - FLUXO DE ATENDIMENTO*/
+                                            /* CORPO 6 */
 #Corpo6{
     display: flex;
     flex-direction: column;
@@ -655,7 +616,7 @@ img {
 }
 
 
-/*CORPO 7 - SOU GESTOR*/
+                                            /* CORPO 7 */
 .tituloC7{
     padding-top: 5%;
     text-shadow: 2px 2px 0px black, -2px -2px 0px white;
@@ -667,7 +628,6 @@ img {
     columns: center;
     grid-template-columns: repeat(2, minmax(200px, 1fr));
     gap: 1%;
-    margin: 3% 5% 0% 5%;
 }
 
 .imgCorpo7{
@@ -791,7 +751,7 @@ img {
 }
 
 
-/*CORPO 8 - SOU USUÁRIO*/
+                                            /* CORPO 8 */
 .tituloC8{
     padding-top: 5%;
     text-shadow: 2px 2px 0px black, -2px -2px 0px white;
@@ -802,8 +762,7 @@ img {
     grid-template-columns: 50% 50%; 
     gap: 5%;
     align-items: start;
-    justify-content: space-between; /* Mantém equilíbrio entre os elementos */
-    margin: 3% 5% 0% 5%;
+    justify-content: space-between;
 }
 
 .tituloC8E{
@@ -876,7 +835,7 @@ ul li img {
 }
 
 
- /* CORPO 9 - SOU PROFISSIONAL*/
+                                            /* CORPO 9 */
 .tituloC9{
     padding-top: 5%;
     text-shadow: 2px 2px 0px black, -2px -2px 0px white;
@@ -885,7 +844,6 @@ ul li img {
 #Corpo9{
     display: grid;
     grid-template-columns: repeat(2, minmax(300px, 1fr));
-    margin: 3% 5% 0% 5%;
 }
 
 .corpo9E{
@@ -940,7 +898,7 @@ ul li img {
     align-items: center;
     text-align: center;
     border-radius: 20%;
-    margin: 10% 5% 15% 0%;
+    margin: 10% 0%;
 }
 .imgC9D{
     width: calc(200px + 5vw);
@@ -951,32 +909,6 @@ ul li img {
     font-size: 1.5rem;
     line-height: 1.6;
     color: #4a4a4a;
-}
-
-.btnC9D{
-    width: calc(300px + 5vw);
-    height: auto;
-    text-align: center;
-    align-items: center;
-    text-decoration: none;
-    font-size: 1.2rem; 
-    font-family: 'Montserrat', sans-serif;
-    border: 1px solid #fff;
-    background-color: #00a79d;
-    color: #fff;
-    text-shadow: 4px 4px 5px #4a4a4a;
-    border-radius: 25px;
-    transition: all 0.3s ease;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    padding: 1%; 
-}
-    
-.btnC9D:hover, .btnC9D:focus {
-    color: #fff !important;
-    background-color: #016185 !important;
-    border-color:#00a79d !important;
-    box-shadow: 0 0 35px #fed433; 
-    transform: translateY(-3px) !important; 
 }
 
 #Corpo9E2{
@@ -1018,7 +950,6 @@ ul li img {
     padding: 5%;
     border-radius: 20%;
 }
-
 
 .legislacoes{
   display: grid;
@@ -1104,11 +1035,13 @@ ul li img {
 }
 
 
-/*CORPO 10 - NOSSA HISTÓRIA*/
+                                            /* CORPO 10 */
+
+.Corpo10{
+    padding-top: 10%;
+}
 .tituloCorpo10A{
     text-align: justify;
-    margin-top: 5%;
-    margin-left: 5%;
 }
 
 #Corpo10A{
@@ -1116,7 +1049,6 @@ ul li img {
     grid-auto-flow: column;
     columns: center;
     gap: 5%;
-    margin: 3% 10% 0% 5%;
 }
 
 #video{
@@ -1134,7 +1066,6 @@ ul li img {
     grid-auto-flow: column;
     columns: center;
     gap: 5%;
-    margin: 1% 10% 0% 15%;
 }
 
 .depoimentoEnf, .depoimentoMed{
@@ -1163,7 +1094,7 @@ ul li img {
 }
 
 
-/*CORPO 11 - RESULTADOS PILOTO*/
+                                            /* CORPO 11 */
 .tituloCorpo11{
     margin-top: 3%;
     margin-bottom: 1%;
@@ -1254,7 +1185,7 @@ ul li img {
 }
 
 
-/*CORPO 12 - COMUNIDADE DE PRÁICAS*/
+                                            /* CORPO 12 */
 #Corpo12 {
     display: flex;
     flex-direction: column;
@@ -1297,34 +1228,9 @@ ul li img {
 }
 
 
-/*CORPO 13 - VEM POR AÍ*/
-#Corpo13{
-    display: grid;
-    grid-auto-flow: column;
-    columns: center;
-    margin: 5% 10% 0% 15%;
-    gap: 3%;
-}
+                                            /* CORPO 13 */
 
-.tituloCorpo13E{
-    font-weight: bold;
-    color: #52b297;
-}
-
-#corpo13D{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-left: 10%;
-}
-.imgCorpo13D{
-    width: 100%;
-    max-width: 200px;
-}
-
-
-/*CORPO 14 - NOTÍCIAS*/
-.tituloCorpo14{
+.tituloCorpo13{
     font-weight: bold;
     color: #52b297;
     text-align: center;
@@ -1332,13 +1238,13 @@ ul li img {
     padding-top: 3%;
 }
 
-#Corpo14{
+#Corpo13{
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 0% 10% 0% 10%;
 }
-.c14Noticias{
+.c13Noticias{
     margin-right: 2%;
     border: none;
     border-radius: 20px;
@@ -1351,8 +1257,8 @@ ul li img {
     margin-top: 25%;
 }
 
-/*CORPO 15 -BIBLIOTECA*/
-#Corpo15{
+                                            /* CORPO 14 */
+#Corpo14{
     display: grid;
     grid-auto-flow: column;
     columns: center;
@@ -1360,12 +1266,12 @@ ul li img {
     gap: 1%;
 }
 
-.imgTituloCorpo15{
+.imgTituloCorpo14{
     width: calc(500px + 5vw);
     margin-top: 8%;   
 }
 
-.textoCorpo15{
+.textoCorpo14{
     margin-top: 4%;
 }
 
@@ -1374,43 +1280,18 @@ ul li img {
     height: auto;
 }
 
-.corpo15D{
+.corpo14D{
     padding-top: 20%;
     margin-top: 10%;
 }
 
-.corpo15D ul li{
+.corpo14D ul li{
     margin-top: 20%;
 }
 
-.btnbiblioteca {
-    width: calc(500px + 5vw);
-    height: 200px;
-    text-align: center;
-    text-decoration: none;
-    font-size: 1.5rem; 
-    font-family: 'Montserrat', sans-serif;
-    padding: 10px;
-    border: 1px solid #fff;
-    background-color: #00a79d;
-    color: #fff;
-    text-shadow: 4px 4px 5px #4a4a4a;
-    border-radius: 25px 0px;
-    margin: 1% 0% 0% 0%;
-    transition: all 0.3s ease;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
-}
 
-.btnbiblioteca:hover, .btnbiblioteca:focus{
-    color: #fff !important;
-    background-color: #016185 !important;
-    border-color:#00a79d !important;
-    box-shadow: 0 0 35px #fed433; 
-    transform: translateY(-3px); 
-}
-
-/*CORPO 16 - FINAL*/
-#Corpo16{
+                                            /* CORPO 15 */
+#Corpo15{
     display: grid;
     grid-auto-flow: column;
     columns: center;
@@ -1418,7 +1299,7 @@ ul li img {
     gap: 5%;
     margin: 5% 10% 0% 15%;
 }
-.corpo162{
+.corpo152{
     display: flex;
     flex-direction: column;
     align-items: left;
@@ -1430,7 +1311,7 @@ ul li img {
     size: 50%;
 }
 
-.tituloC16D{
+.tituloC15D{
     font-weight: bold;
     color: #00a79d;
 }
@@ -1451,7 +1332,7 @@ ul li img {
 
 .redesSociais div {
     display: flex;
-    align-items: center; /* Alinha os elementos verticalmente */
+    align-items: center; 
     gap: 10px;
 }
 
@@ -1468,7 +1349,7 @@ ul li img {
 }
 
 .redesSociais p {
-    margin: 0; /* Remove margens para evitar desalinhamento */
+    margin: 0; 
     font-size: 1rem;
 }
 .imgRedesSociaisSUSito{
@@ -1480,7 +1361,7 @@ ul li img {
 }
 
 
-/*RODAPE*/
+                                            /* RODAPE */
 footer{
     margin-top: 7%;
     text-align: center;
@@ -1531,7 +1412,7 @@ footer{
 }
 
 
-/*ABA DO CHAT - SUSito*/
+                                            /*ABA DO CHAT - SUSito*/
 @keyframes gradientMove {
     0% { background-position: 0% 50%; }
     50% { background-position: 100% 50%; }
