--- a/style.css
+++ b/style.css
@@ -1194,12 +1194,90 @@ ul li img {
     margin: 5% 10% 0% 10%;
 }
 
+/*
 .tituloCorpo12 {
     font-weight: bold;
     color: #ffbd59;
     font-size: 2.5rem !important;
     text-align: left !important;
     margin-bottom: 2%;
+}
+
+.textoC12{
+    width: 800px;
+    font-size: 1.5rem;
+    text-align: justify;
+}
+.imgCorpo12 {
+    width: calc(300px + 5vw);
+    height: auto;
+    padding-top: 3%;
+    margin-left: 15%;
+}
+
+.textoC122{
+    width: 800px;
+    font-size: 1.5rem;
+    text-align: justify;
+    padding-top: 3%;
+}
+    */
+    
+.tituloCorpo12 {
+    font-family: 'Montserrat', sans-serif;
+    color: #00a79d;
+    font-size: 2.2rem !important;
+    text-align: left !important;
+}
+
+.barrasContainer{
+    display: flex;
+    width: 100%;
+    margin-top: 10px;
+}
+.designLinha{
+    flex: 1;
+    width: 330px;
+    height: 15px;
+}
+
+.depoimentos{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 10px;
+    margin-bottom: 70px;
+}
+
+.designDepoimentos{
+    width: 330px;
+    height: 180px;
+    background-color: lightblue;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+}
+
+.botaoSaibaMais{
+    width: 260px;
+    height: 70px;
+    background-color: #00a79d;
+    font-family: 'Montserrat', sans-serif;
+    border-radius: 10px;
+    border-color: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+}
+.tituloCorpo12v2 {
+    font-family: 'Montserrat', sans-serif;
+    color: #016185;
+    font-size: 1.5rem !important;
+    text-align: left !important;
+    margin-top: 60px;
 }
 
 .hashtags{
@@ -1210,9 +1288,12 @@ ul li img {
     margin-bottom: 2%;
 }
 .textoC12{
-    width: 800px;
-    font-size: 1.5rem;
+    font-family: 'Montserrat', sans-serif;
+    width: 1000px;
+    color: #016185;
+    font-size: 1.2rem;
     text-align: justify;
+    margin-bottom: 70px;
 }
 .imgCorpo12 {
     width: calc(300px + 5vw);
