--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ a {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 50px 5%;
+    padding: 3.125rem 5%;
     width: 100%;
     position: fixed;
     top: 0;
@@ -199,12 +199,12 @@ img {
 .imagem-susete {
   align-self: start;
   margin-left: 25%;
-  height: 80%;
+  height: 100%;
   margin-top: 4%;
 }
 
 .logo-c2 {
-  max-width: 400px;
+  max-width: 25rem;
   width: 40vw;
   height: auto;
   right: 0;
